// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ya images cell block does not show expand/collapse when 5 or less 1`] = `
Array [
  Object {
    "backgroundColor": "FFFFFF",
    "backgroundColorDark": "1C1C1E",
    "backgroundColorID": 45,
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "flex": 1,
                "fontSize": 24,
                "fontWeight": "bold",
                "name": "text",
                "text": "Фотографии из Яндекс.Картинок",
                "textColor": "000000",
                "textColorDark": "FFFFFF",
                "textColorID": 47,
              },
              Object {
                "alignItems": "center",
                "children": Array [
                  Object {
                    "name": "ignore",
                  },
                  Object {
                    "fontSize": 14,
                    "name": "text",
                    "onTap": undefined,
                    "text": "Обновлено Invalid Date",
                    "textColor": "80000000",
                    "textColorDark": "98FFFFFF",
                    "textColorID": 48,
                  },
                ],
                "margin": "{3, 0, 0, 0}",
                "name": "stack",
              },
            ],
            "flex": 1,
            "flexDirection": "column",
            "name": "stack",
            "padding": "{0, 24, 0, 24}",
          },
          Object {
            "name": "ignore",
          },
        ],
        "name": "stack",
      },
      Object {
        "children": Array [
          Object {
            "alignItems": "center",
            "children": Array [
              Object {
                "contentMode": "scaleAspectFill",
                "height": "24",
                "margin": "{0,0,0,16}",
                "name": "image",
                "url": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/camera/light.png",
                "urlDark": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/camera/dark.png",
                "width": "24",
              },
              Object {
                "children": Array [
                  Object {
                    "fontSize": 17,
                    "name": "text",
                    "text": "Reddit.com",
                    "textColor": "000000",
                    "textColorDark": "FFFFFF",
                    "textColorID": 47,
                  },
                  Object {
                    "fontSize": 13,
                    "name": "text",
                    "text": "250x300",
                    "textColor": "80000000",
                    "textColorDark": "98FFFFFF",
                    "textColorID": 48,
                  },
                ],
                "flex": "1",
                "flexDirection": "column",
                "flexGrow": "1",
                "name": "stack",
              },
              Object {
                "children": Array [
                  Object {
                    "contentMode": "scaleAspectFit",
                    "height": "24",
                    "name": "image",
                    "url": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/arrow-right/light.png",
                    "urlDark": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/arrow-right/dark.png",
                    "width": "24",
                  },
                ],
                "name": "stack",
              },
            ],
            "flexDirection": "row",
            "margin": "{0,24,0,24}",
            "name": "stack",
            "onTap": "https://preview.redd.it/2l2av8at5sn31.jpg",
            "padding": "{9,0,9,0}",
          },
          Object {
            "backgroundColor": "1A000000",
            "backgroundColorDark": "1AFFFFFF",
            "backgroundColorID": 45,
            "height": "1",
            "margin": "{0,24,0,24}",
            "name": "stack",
          },
          Object {
            "alignItems": "center",
            "children": Array [
              Object {
                "contentMode": "scaleAspectFill",
                "height": "24",
                "margin": "{0,0,0,16}",
                "name": "image",
                "url": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/camera/light.png",
                "urlDark": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/camera/dark.png",
                "width": "24",
              },
              Object {
                "children": Array [
                  Object {
                    "fontSize": 17,
                    "name": "text",
                    "text": "Reddit.com",
                    "textColor": "000000",
                    "textColorDark": "FFFFFF",
                    "textColorID": 47,
                  },
                  Object {
                    "fontSize": 13,
                    "name": "text",
                    "text": "250x300",
                    "textColor": "80000000",
                    "textColorDark": "98FFFFFF",
                    "textColorID": 48,
                  },
                ],
                "flex": "1",
                "flexDirection": "column",
                "flexGrow": "1",
                "name": "stack",
              },
              Object {
                "children": Array [
                  Object {
                    "contentMode": "scaleAspectFit",
                    "height": "24",
                    "name": "image",
                    "url": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/arrow-right/light.png",
                    "urlDark": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/arrow-right/dark.png",
                    "width": "24",
                  },
                ],
                "name": "stack",
              },
            ],
            "flexDirection": "row",
            "margin": "{0,24,0,24}",
            "name": "stack",
            "onTap": "https://preview.redd.it/2l2av8at5sn31.jpg",
            "padding": "{9,0,9,0}",
          },
          Object {
            "backgroundColor": "1A000000",
            "backgroundColorDark": "1AFFFFFF",
            "backgroundColorID": 45,
            "height": "1",
            "margin": "{0,24,0,24}",
            "name": "stack",
          },
          Object {
            "alignItems": "center",
            "children": Array [
              Object {
                "contentMode": "scaleAspectFill",
                "height": "24",
                "margin": "{0,0,0,16}",
                "name": "image",
                "url": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/camera/light.png",
                "urlDark": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/camera/dark.png",
                "width": "24",
              },
              Object {
                "children": Array [
                  Object {
                    "fontSize": 17,
                    "name": "text",
                    "text": "Reddit.com",
                    "textColor": "000000",
                    "textColorDark": "FFFFFF",
                    "textColorID": 47,
                  },
                  Object {
                    "fontSize": 13,
                    "name": "text",
                    "text": "250x300",
                    "textColor": "80000000",
                    "textColorDark": "98FFFFFF",
                    "textColorID": 48,
                  },
                ],
                "flex": "1",
                "flexDirection": "column",
                "flexGrow": "1",
                "name": "stack",
              },
              Object {
                "children": Array [
                  Object {
                    "contentMode": "scaleAspectFit",
                    "height": "24",
                    "name": "image",
                    "url": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/arrow-right/light.png",
                    "urlDark": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/arrow-right/dark.png",
                    "width": "24",
                  },
                ],
                "name": "stack",
              },
            ],
            "flexDirection": "row",
            "margin": "{0,24,0,24}",
            "name": "stack",
            "onTap": "https://preview.redd.it/2l2av8at5sn31.jpg",
            "padding": "{9,0,9,0}",
          },
          Object {
            "backgroundColor": "1A000000",
            "backgroundColorDark": "1AFFFFFF",
            "backgroundColorID": 45,
            "height": "1",
            "margin": "{0,24,0,24}",
            "name": "stack",
          },
          Object {
            "alignItems": "center",
            "children": Array [
              Object {
                "contentMode": "scaleAspectFill",
                "height": "24",
                "margin": "{0,0,0,16}",
                "name": "image",
                "url": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/camera/light.png",
                "urlDark": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/camera/dark.png",
                "width": "24",
              },
              Object {
                "children": Array [
                  Object {
                    "fontSize": 17,
                    "name": "text",
                    "text": "Reddit.com",
                    "textColor": "000000",
                    "textColorDark": "FFFFFF",
                    "textColorID": 47,
                  },
                  Object {
                    "fontSize": 13,
                    "name": "text",
                    "text": "250x300",
                    "textColor": "80000000",
                    "textColorDark": "98FFFFFF",
                    "textColorID": 48,
                  },
                ],
                "flex": "1",
                "flexDirection": "column",
                "flexGrow": "1",
                "name": "stack",
              },
              Object {
                "children": Array [
                  Object {
                    "contentMode": "scaleAspectFit",
                    "height": "24",
                    "name": "image",
                    "url": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/arrow-right/light.png",
                    "urlDark": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/arrow-right/dark.png",
                    "width": "24",
                  },
                ],
                "name": "stack",
              },
            ],
            "flexDirection": "row",
            "margin": "{0,24,0,24}",
            "name": "stack",
            "onTap": "https://preview.redd.it/2l2av8at5sn31.jpg",
            "padding": "{9,0,9,0}",
          },
          Object {
            "backgroundColor": "1A000000",
            "backgroundColorDark": "1AFFFFFF",
            "backgroundColorID": 45,
            "height": "1",
            "margin": "{0,24,0,24}",
            "name": "stack",
          },
          Object {
            "alignItems": "center",
            "children": Array [
              Object {
                "contentMode": "scaleAspectFill",
                "height": "24",
                "margin": "{0,0,0,16}",
                "name": "image",
                "url": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/camera/light.png",
                "urlDark": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/camera/dark.png",
                "width": "24",
              },
              Object {
                "children": Array [
                  Object {
                    "fontSize": 17,
                    "name": "text",
                    "text": "Reddit.com",
                    "textColor": "000000",
                    "textColorDark": "FFFFFF",
                    "textColorID": 47,
                  },
                  Object {
                    "fontSize": 13,
                    "name": "text",
                    "text": "250x300",
                    "textColor": "80000000",
                    "textColorDark": "98FFFFFF",
                    "textColorID": 48,
                  },
                ],
                "flex": "1",
                "flexDirection": "column",
                "flexGrow": "1",
                "name": "stack",
              },
              Object {
                "children": Array [
                  Object {
                    "contentMode": "scaleAspectFit",
                    "height": "24",
                    "name": "image",
                    "url": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/arrow-right/light.png",
                    "urlDark": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/arrow-right/dark.png",
                    "width": "24",
                  },
                ],
                "name": "stack",
              },
            ],
            "flexDirection": "row",
            "margin": "{0,24,0,24}",
            "name": "stack",
            "onTap": "https://preview.redd.it/2l2av8at5sn31.jpg",
            "padding": "{9,0,9,0}",
          },
        ],
        "flexDirection": "column",
        "id": "yaImagesCollapsed",
        "name": "stack",
      },
    ],
    "cornerRadius": "24",
    "flexDirection": "column",
    "id": "yaimages",
    "margin": "{0, 0, 16, 0}",
    "name": "stack",
    "padding": "{24, 0, 0, 0}",
  },
]
`;

exports[`ya images cell block shows expand cell when more than 5 1`] = `
Object {
  "children": Array [
    Object {
      "alignItems": "center",
      "children": Array [
        Object {
          "contentMode": "scaleAspectFill",
          "height": "24",
          "margin": "{0,0,0,16}",
          "name": "image",
          "url": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/camera/light.png",
          "urlDark": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/camera/dark.png",
          "width": "24",
        },
        Object {
          "children": Array [
            Object {
              "fontSize": 17,
              "name": "text",
              "text": "Reddit.com",
              "textColor": "000000",
              "textColorDark": "FFFFFF",
              "textColorID": 47,
            },
            Object {
              "fontSize": 13,
              "name": "text",
              "text": "250x300",
              "textColor": "80000000",
              "textColorDark": "98FFFFFF",
              "textColorID": 48,
            },
          ],
          "flex": "1",
          "flexDirection": "column",
          "flexGrow": "1",
          "name": "stack",
        },
        Object {
          "children": Array [
            Object {
              "contentMode": "scaleAspectFit",
              "height": "24",
              "name": "image",
              "url": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/arrow-right/light.png",
              "urlDark": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/arrow-right/dark.png",
              "width": "24",
            },
          ],
          "name": "stack",
        },
      ],
      "flexDirection": "row",
      "margin": "{0,24,0,24}",
      "name": "stack",
      "onTap": "https://preview.redd.it/2l2av8at5sn31.jpg",
      "padding": "{9,0,9,0}",
    },
    Object {
      "backgroundColor": "1A000000",
      "backgroundColorDark": "1AFFFFFF",
      "backgroundColorID": 45,
      "height": "1",
      "margin": "{0,24,0,24}",
      "name": "stack",
    },
    Object {
      "alignItems": "center",
      "children": Array [
        Object {
          "contentMode": "scaleAspectFill",
          "height": "24",
          "margin": "{0,0,0,16}",
          "name": "image",
          "url": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/camera/light.png",
          "urlDark": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/camera/dark.png",
          "width": "24",
        },
        Object {
          "children": Array [
            Object {
              "fontSize": 17,
              "name": "text",
              "text": "Reddit.com",
              "textColor": "000000",
              "textColorDark": "FFFFFF",
              "textColorID": 47,
            },
            Object {
              "fontSize": 13,
              "name": "text",
              "text": "250x300",
              "textColor": "80000000",
              "textColorDark": "98FFFFFF",
              "textColorID": 48,
            },
          ],
          "flex": "1",
          "flexDirection": "column",
          "flexGrow": "1",
          "name": "stack",
        },
        Object {
          "children": Array [
            Object {
              "contentMode": "scaleAspectFit",
              "height": "24",
              "name": "image",
              "url": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/arrow-right/light.png",
              "urlDark": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/arrow-right/dark.png",
              "width": "24",
            },
          ],
          "name": "stack",
        },
      ],
      "flexDirection": "row",
      "margin": "{0,24,0,24}",
      "name": "stack",
      "onTap": "https://preview.redd.it/2l2av8at5sn31.jpg",
      "padding": "{9,0,9,0}",
    },
    Object {
      "backgroundColor": "1A000000",
      "backgroundColorDark": "1AFFFFFF",
      "backgroundColorID": 45,
      "height": "1",
      "margin": "{0,24,0,24}",
      "name": "stack",
    },
    Object {
      "alignItems": "center",
      "children": Array [
        Object {
          "contentMode": "scaleAspectFill",
          "height": "24",
          "margin": "{0,0,0,16}",
          "name": "image",
          "url": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/camera/light.png",
          "urlDark": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/camera/dark.png",
          "width": "24",
        },
        Object {
          "children": Array [
            Object {
              "fontSize": 17,
              "name": "text",
              "text": "Reddit.com",
              "textColor": "000000",
              "textColorDark": "FFFFFF",
              "textColorID": 47,
            },
            Object {
              "fontSize": 13,
              "name": "text",
              "text": "250x300",
              "textColor": "80000000",
              "textColorDark": "98FFFFFF",
              "textColorID": 48,
            },
          ],
          "flex": "1",
          "flexDirection": "column",
          "flexGrow": "1",
          "name": "stack",
        },
        Object {
          "children": Array [
            Object {
              "contentMode": "scaleAspectFit",
              "height": "24",
              "name": "image",
              "url": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/arrow-right/light.png",
              "urlDark": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/arrow-right/dark.png",
              "width": "24",
            },
          ],
          "name": "stack",
        },
      ],
      "flexDirection": "row",
      "margin": "{0,24,0,24}",
      "name": "stack",
      "onTap": "https://preview.redd.it/2l2av8at5sn31.jpg",
      "padding": "{9,0,9,0}",
    },
    Object {
      "backgroundColor": "1A000000",
      "backgroundColorDark": "1AFFFFFF",
      "backgroundColorID": 45,
      "height": "1",
      "margin": "{0,24,0,24}",
      "name": "stack",
    },
    Object {
      "alignItems": "center",
      "children": Array [
        Object {
          "contentMode": "scaleAspectFill",
          "height": "24",
          "margin": "{0,0,0,16}",
          "name": "image",
          "url": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/camera/light.png",
          "urlDark": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/camera/dark.png",
          "width": "24",
        },
        Object {
          "children": Array [
            Object {
              "fontSize": 17,
              "name": "text",
              "text": "Reddit.com",
              "textColor": "000000",
              "textColorDark": "FFFFFF",
              "textColorID": 47,
            },
            Object {
              "fontSize": 13,
              "name": "text",
              "text": "250x300",
              "textColor": "80000000",
              "textColorDark": "98FFFFFF",
              "textColorID": 48,
            },
          ],
          "flex": "1",
          "flexDirection": "column",
          "flexGrow": "1",
          "name": "stack",
        },
        Object {
          "children": Array [
            Object {
              "contentMode": "scaleAspectFit",
              "height": "24",
              "name": "image",
              "url": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/arrow-right/light.png",
              "urlDark": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/arrow-right/dark.png",
              "width": "24",
            },
          ],
          "name": "stack",
        },
      ],
      "flexDirection": "row",
      "margin": "{0,24,0,24}",
      "name": "stack",
      "onTap": "https://preview.redd.it/2l2av8at5sn31.jpg",
      "padding": "{9,0,9,0}",
    },
    Object {
      "backgroundColor": "1A000000",
      "backgroundColorDark": "1AFFFFFF",
      "backgroundColorID": 45,
      "height": "1",
      "margin": "{0,24,0,24}",
      "name": "stack",
    },
    Object {
      "alignItems": "center",
      "children": Array [
        Object {
          "contentMode": "scaleAspectFill",
          "height": "24",
          "margin": "{0,0,0,16}",
          "name": "image",
          "url": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/camera/light.png",
          "urlDark": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/camera/dark.png",
          "width": "24",
        },
        Object {
          "children": Array [
            Object {
              "fontSize": 17,
              "name": "text",
              "text": "Reddit.com",
              "textColor": "000000",
              "textColorDark": "FFFFFF",
              "textColorID": 47,
            },
            Object {
              "fontSize": 13,
              "name": "text",
              "text": "250x300",
              "textColor": "80000000",
              "textColorDark": "98FFFFFF",
              "textColorID": 48,
            },
          ],
          "flex": "1",
          "flexDirection": "column",
          "flexGrow": "1",
          "name": "stack",
        },
        Object {
          "children": Array [
            Object {
              "contentMode": "scaleAspectFit",
              "height": "24",
              "name": "image",
              "url": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/arrow-right/light.png",
              "urlDark": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/arrow-right/dark.png",
              "width": "24",
            },
          ],
          "name": "stack",
        },
      ],
      "flexDirection": "row",
      "margin": "{0,24,0,24}",
      "name": "stack",
      "onTap": "https://preview.redd.it/2l2av8at5sn31.jpg",
      "padding": "{9,0,9,0}",
    },
    Object {
      "backgroundColor": "1A000000",
      "backgroundColorDark": "1AFFFFFF",
      "backgroundColorID": 45,
      "height": "1",
      "margin": "{0,24,0,24}",
      "name": "stack",
    },
    Object {
      "alignItems": "center",
      "children": Array [
        Object {
          "contentMode": "scaleAspectFill",
          "height": "24",
          "margin": "{0,0,0,16}",
          "name": "image",
          "url": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/camera/light.png",
          "urlDark": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/camera/dark.png",
          "width": "24",
        },
        Object {
          "children": Array [
            Object {
              "fontSize": 17,
              "name": "text",
              "text": "Reddit.com",
              "textColor": "000000",
              "textColorDark": "FFFFFF",
              "textColorID": 47,
            },
            Object {
              "fontSize": 13,
              "name": "text",
              "text": "250x300",
              "textColor": "80000000",
              "textColorDark": "98FFFFFF",
              "textColorID": 48,
            },
          ],
          "flex": "1",
          "flexDirection": "column",
          "flexGrow": "1",
          "name": "stack",
        },
        Object {
          "children": Array [
            Object {
              "contentMode": "scaleAspectFit",
              "height": "24",
              "name": "image",
              "url": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/arrow-right/light.png",
              "urlDark": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/arrow-right/dark.png",
              "width": "24",
            },
          ],
          "name": "stack",
        },
      ],
      "flexDirection": "row",
      "margin": "{0,24,0,24}",
      "name": "stack",
      "onTap": "https://preview.redd.it/2l2av8at5sn31.jpg",
      "padding": "{9,0,9,0}",
    },
    Object {
      "backgroundColor": "1A000000",
      "backgroundColorDark": "1AFFFFFF",
      "backgroundColorID": 45,
      "height": "1",
      "margin": "{0,24,0,24}",
      "name": "stack",
    },
    Object {
      "children": Array [
        Object {
          "fontWeight": "semibold",
          "name": "text",
          "onTapHide": "yaImagesExpanded",
          "onTapShow": "yaImagesCollapsed",
          "text": "Свернуть",
          "textColor": "0C78ED",
          "textColorDark": "0C78ED",
          "textColorID": 50,
          "textSize": 15,
        },
      ],
      "margin": "{24,24,24,24}",
      "name": "stack",
    },
  ],
  "flexDirection": "column",
  "id": "yaImagesExpanded",
  "name": "stack",
  "visible": false,
}
`;

exports[`ya images cell block shows expand cell when more than 5 2`] = `
Object {
  "children": Array [
    Object {
      "alignItems": "center",
      "children": Array [
        Object {
          "contentMode": "scaleAspectFill",
          "height": "24",
          "margin": "{0,0,0,16}",
          "name": "image",
          "url": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/camera/light.png",
          "urlDark": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/camera/dark.png",
          "width": "24",
        },
        Object {
          "children": Array [
            Object {
              "fontSize": 17,
              "name": "text",
              "text": "Reddit.com",
              "textColor": "000000",
              "textColorDark": "FFFFFF",
              "textColorID": 47,
            },
            Object {
              "fontSize": 13,
              "name": "text",
              "text": "250x300",
              "textColor": "80000000",
              "textColorDark": "98FFFFFF",
              "textColorID": 48,
            },
          ],
          "flex": "1",
          "flexDirection": "column",
          "flexGrow": "1",
          "name": "stack",
        },
        Object {
          "children": Array [
            Object {
              "contentMode": "scaleAspectFit",
              "height": "24",
              "name": "image",
              "url": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/arrow-right/light.png",
              "urlDark": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/arrow-right/dark.png",
              "width": "24",
            },
          ],
          "name": "stack",
        },
      ],
      "flexDirection": "row",
      "margin": "{0,24,0,24}",
      "name": "stack",
      "onTap": "https://preview.redd.it/2l2av8at5sn31.jpg",
      "padding": "{9,0,9,0}",
    },
    Object {
      "backgroundColor": "1A000000",
      "backgroundColorDark": "1AFFFFFF",
      "backgroundColorID": 45,
      "height": "1",
      "margin": "{0,24,0,24}",
      "name": "stack",
    },
    Object {
      "alignItems": "center",
      "children": Array [
        Object {
          "contentMode": "scaleAspectFill",
          "height": "24",
          "margin": "{0,0,0,16}",
          "name": "image",
          "url": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/camera/light.png",
          "urlDark": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/camera/dark.png",
          "width": "24",
        },
        Object {
          "children": Array [
            Object {
              "fontSize": 17,
              "name": "text",
              "text": "Reddit.com",
              "textColor": "000000",
              "textColorDark": "FFFFFF",
              "textColorID": 47,
            },
            Object {
              "fontSize": 13,
              "name": "text",
              "text": "250x300",
              "textColor": "80000000",
              "textColorDark": "98FFFFFF",
              "textColorID": 48,
            },
          ],
          "flex": "1",
          "flexDirection": "column",
          "flexGrow": "1",
          "name": "stack",
        },
        Object {
          "children": Array [
            Object {
              "contentMode": "scaleAspectFit",
              "height": "24",
              "name": "image",
              "url": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/arrow-right/light.png",
              "urlDark": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/arrow-right/dark.png",
              "width": "24",
            },
          ],
          "name": "stack",
        },
      ],
      "flexDirection": "row",
      "margin": "{0,24,0,24}",
      "name": "stack",
      "onTap": "https://preview.redd.it/2l2av8at5sn31.jpg",
      "padding": "{9,0,9,0}",
    },
    Object {
      "backgroundColor": "1A000000",
      "backgroundColorDark": "1AFFFFFF",
      "backgroundColorID": 45,
      "height": "1",
      "margin": "{0,24,0,24}",
      "name": "stack",
    },
    Object {
      "alignItems": "center",
      "children": Array [
        Object {
          "contentMode": "scaleAspectFill",
          "height": "24",
          "margin": "{0,0,0,16}",
          "name": "image",
          "url": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/camera/light.png",
          "urlDark": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/camera/dark.png",
          "width": "24",
        },
        Object {
          "children": Array [
            Object {
              "fontSize": 17,
              "name": "text",
              "text": "Reddit.com",
              "textColor": "000000",
              "textColorDark": "FFFFFF",
              "textColorID": 47,
            },
            Object {
              "fontSize": 13,
              "name": "text",
              "text": "250x300",
              "textColor": "80000000",
              "textColorDark": "98FFFFFF",
              "textColorID": 48,
            },
          ],
          "flex": "1",
          "flexDirection": "column",
          "flexGrow": "1",
          "name": "stack",
        },
        Object {
          "children": Array [
            Object {
              "contentMode": "scaleAspectFit",
              "height": "24",
              "name": "image",
              "url": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/arrow-right/light.png",
              "urlDark": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/arrow-right/dark.png",
              "width": "24",
            },
          ],
          "name": "stack",
        },
      ],
      "flexDirection": "row",
      "margin": "{0,24,0,24}",
      "name": "stack",
      "onTap": "https://preview.redd.it/2l2av8at5sn31.jpg",
      "padding": "{9,0,9,0}",
    },
    Object {
      "backgroundColor": "1A000000",
      "backgroundColorDark": "1AFFFFFF",
      "backgroundColorID": 45,
      "height": "1",
      "margin": "{0,24,0,24}",
      "name": "stack",
    },
    Object {
      "alignItems": "center",
      "children": Array [
        Object {
          "contentMode": "scaleAspectFill",
          "height": "24",
          "margin": "{0,0,0,16}",
          "name": "image",
          "url": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/camera/light.png",
          "urlDark": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/camera/dark.png",
          "width": "24",
        },
        Object {
          "children": Array [
            Object {
              "fontSize": 17,
              "name": "text",
              "text": "Reddit.com",
              "textColor": "000000",
              "textColorDark": "FFFFFF",
              "textColorID": 47,
            },
            Object {
              "fontSize": 13,
              "name": "text",
              "text": "250x300",
              "textColor": "80000000",
              "textColorDark": "98FFFFFF",
              "textColorID": 48,
            },
          ],
          "flex": "1",
          "flexDirection": "column",
          "flexGrow": "1",
          "name": "stack",
        },
        Object {
          "children": Array [
            Object {
              "contentMode": "scaleAspectFit",
              "height": "24",
              "name": "image",
              "url": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/arrow-right/light.png",
              "urlDark": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/arrow-right/dark.png",
              "width": "24",
            },
          ],
          "name": "stack",
        },
      ],
      "flexDirection": "row",
      "margin": "{0,24,0,24}",
      "name": "stack",
      "onTap": "https://preview.redd.it/2l2av8at5sn31.jpg",
      "padding": "{9,0,9,0}",
    },
    Object {
      "backgroundColor": "1A000000",
      "backgroundColorDark": "1AFFFFFF",
      "backgroundColorID": 45,
      "height": "1",
      "margin": "{0,24,0,24}",
      "name": "stack",
    },
    Object {
      "alignItems": "center",
      "children": Array [
        Object {
          "contentMode": "scaleAspectFill",
          "height": "24",
          "margin": "{0,0,0,16}",
          "name": "image",
          "url": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/camera/light.png",
          "urlDark": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/camera/dark.png",
          "width": "24",
        },
        Object {
          "children": Array [
            Object {
              "fontSize": 17,
              "name": "text",
              "text": "Reddit.com",
              "textColor": "000000",
              "textColorDark": "FFFFFF",
              "textColorID": 47,
            },
            Object {
              "fontSize": 13,
              "name": "text",
              "text": "250x300",
              "textColor": "80000000",
              "textColorDark": "98FFFFFF",
              "textColorID": 48,
            },
          ],
          "flex": "1",
          "flexDirection": "column",
          "flexGrow": "1",
          "name": "stack",
        },
        Object {
          "children": Array [
            Object {
              "contentMode": "scaleAspectFit",
              "height": "24",
              "name": "image",
              "url": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/arrow-right/light.png",
              "urlDark": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/arrow-right/dark.png",
              "width": "24",
            },
          ],
          "name": "stack",
        },
      ],
      "flexDirection": "row",
      "margin": "{0,24,0,24}",
      "name": "stack",
      "onTap": "https://preview.redd.it/2l2av8at5sn31.jpg",
      "padding": "{9,0,9,0}",
    },
    Object {
      "backgroundColor": "1A000000",
      "backgroundColorDark": "1AFFFFFF",
      "backgroundColorID": 45,
      "height": "1",
      "margin": "{0,24,0,24}",
      "name": "stack",
    },
    Object {
      "children": Array [
        Object {
          "fontWeight": "semibold",
          "name": "text",
          "onTapHide": "yaImagesCollapsed",
          "onTapShow": "yaImagesExpanded",
          "text": "Ещё 1 фотография",
          "textColor": "0C78ED",
          "textColorDark": "0C78ED",
          "textColorID": 50,
          "textSize": 15,
        },
      ],
      "margin": "{24,24,24,24}",
      "name": "stack",
    },
  ],
  "flexDirection": "column",
  "id": "yaImagesCollapsed",
  "name": "stack",
}
`;
